tests/gen-derivation/derivation/core/norec t-pi->.. noext 001/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Target types with implicit type parameters are not supported yet

DerivedGen:9:61--9:66
 5 | %default total
 6 | 
 7 | %language ElabReflection
 8 | 
 9 | checkedGen : Fuel -> (a, b : Bool) -> Gen CanBeEmptyStatic (a = b)
                                                                 ^^^^^

